--- a/P1_CURRICULUM_AMSCV2/index.html
+++ b/P1_CURRICULUM_AMSCV2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae - Angela Maria Salas Carreño</title>
-    <link rel="stylesheet" href="..src/css.p1curriculumv2.css">
+    <link rel="stylesheet" href="../P1_CURRICULUM_AMSCV2/src/css/p1curriculumv2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
@@ -25,13 +25,12 @@
         <div class="contacto-info">
             <div>
                 <img src="gmail.png" alt="Email" width="50">
-                <p>Angelasalas3007@gmail.com</p>
-                <p>Ing.salasangela30@gmail.com</p>
+                <p>xxxxxxxx@gmail.com</p>
+                <p>xxxxxxxx@gmail.com</p>
             </div>
             <div>
                 <img src="call.png" alt="Phone" width="50">
-                <p>+58 412 2365169</p>
-                <p>+58 412 2836412</p>
+                <p>+58 xxx 2365169</p>
             </div>
             <div>
                 <img src="map.png" alt="Location" width="50">
@@ -39,7 +38,7 @@
             </div>
         </div>
 
-        <section class="experiencia">
+        <section class="info-tecnica">
             <h2>EXPERIENCIA PROFESIONAL</h2>
             <ul>
                 <li>
@@ -75,23 +74,23 @@
             </ul>
         </section>
 
-        <section class="section">
+        <section class="info-tecnica">
             <h2>HABILIDADES</h2>
             <p>Trabajo en equipo | Responsable | Autodidacta | Proactiva | Analítica | Supervisión | Coordinación</p>
         </section>
 
-        <section class="section">
+        <section class="info-tecnica">
             <h2>SOFTWARE</h2>
             <p>Metricool | Meta Business Suite | Notion | Canva | Aplicaciones Google Drive-calendar –Perfiles de empresas- Meet | Redes Sociales | Aplicaciones de Ofimática | Trello | MySQL | S.O Windows | S.O Linux Básico | S.O Windows Server | A2 Softway | ProteoERP | Project</p>
         </section>
 
-        <section class="section">
+        <section class="info-tecnica">
             <h2>IDIOMAS</h2>
             <p>Español Nativo</p>
             <p>Inglés</p>
         </section>
 
-        <section class="section">
+        <section class="info-tecnica">
             <h2>EDUCACIÓN</h2>
             <ul>
                 <li>
@@ -107,7 +106,7 @@
             </ul>
         </section>
 
-        <section class="section">
+        <section class="info-tecnica">
             <h2>REFERENCIAS PROFESIONALES</h2>
             <ul>
                 <li>
@@ -128,7 +127,7 @@
             </ul>
         </section>
 
-        <section class="section">
+        <section class="info-tecnica">
             <h2>FORMACIONES ADICIONALES</h2>
             <ul>
                 <li>PROTEJE TU NEGOCIO: CIBERSEGURIDAD EN EL TELETRABAJO</li>
