--- a/P1_CURRICULUM_AMSCV2/index.html
+++ b/P1_CURRICULUM_AMSCV2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae - Angela Maria Salas Carreño</title>
+    <img src="fondo.png" alt="center" width="100%" height="50%">
     <link rel="stylesheet" href="../P1_CURRICULUM_AMSCV2/src/css/p1curriculumv2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
