--- a/P1_CURRICULUM_AMSCV2/index.html
+++ b/P1_CURRICULUM_AMSCV2/index.html
@@ -106,28 +106,28 @@
                 </li>
             </ul>
         </section>
-
+        <!--   
         <section class="info-tecnica">
             <h2>REFERENCIAS PROFESIONALES</h2>
             <ul>
                 <li>
                     <h3>EYLIN SOTO. LCDA. EN DISEÑO GRAFICO</h3>
-                    <p>Teléfono: +014704694882</p>
-                    <p>E-mail: eylinsoto@gmail.com</p>
+                    <p>Teléfono: +XXXXX</p>
+                    <p>E-mail: XXXXXXX@gmail.com</p>
                 </li>
                 <li>
                     <h3>LOURDES MARTINEZ. ADMINISTRACIÓN ADUANERA</h3>
-                    <p>Teléfono: +34624577157</p>
-                    <p>E-mail: lemartg@gmail.com</p>
+                    <p>Teléfono: +XXXXXXX</p>
+                    <p>E-mail: XXXXXXg@gmail.com</p>
                 </li>
                 <li>
                     <h3>IRAIDA ESCALONA. ABOGADA.</h3>
-                    <p>Teléfono: +17863523500</p>
+                    <p>Teléfono: +XXXXXXX/p>
                     <p>E-mail: escalonairaidacba@gmail.com</p>
                 </li>
             </ul>
         </section>
-
+         -->
         <section class="info-tecnica">
             <h2>FORMACIONES ADICIONALES</h2>
             <ul>
