--- a/P1_CURRICULUM_AMSCV2/index.html
+++ b/P1_CURRICULUM_AMSCV2/index.html
@@ -31,7 +31,7 @@
             </div>
             <div>
                 <img src="call.png" alt="Phone" width="50">
-                <p>+58 xxx 2365169</p>
+                <p>+58 xxx XXX5169</p>
             </div>
             <div>
                 <img src="map.png" alt="Location" width="50">
